crates/biome_html_parser/tests/html_specs/ok/svelte/directives/in_basic.svelte
<div in:fly>Flies in</div>
