crates/biome_html_parser/tests/html_specs/error/svelte/directives/in_invalid_params.svelte
<div in:fly={{ y: >Incomplete</div>
